clusters/production/apps/openhab/openhab-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: openhab-headers
spec:
  headers:
    customRequestHeaders:
      X-OPENHAB-AUTH-HEADER: "true"
    customResponseHeaders:
      X-OPENHAB-AUTH-HEADER: "true"
