clusters/production/apps/openhab/openhab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openhab-production
  labels:
    app: openhab-production
spec:
  type: NodePort
  selector:
    app: openhab-production
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30080
      name: openhab-http
    - port: 8443
      protocol: TCP
      targetPort: 8443
      name: openhab-https
    - port: 8101
      protocol: TCP
      targetPort: 8101
      name: openhab-console
